# Circ

./: .gitignore  CMakeLists.txt  README.md  main.c
Learning/: README.md
Learning/Socket/: client.c  server.c
src/: main.c
src/interfaces/: errors.h  user.h  utils.h
src/modules/: errors.c  user.c  utils.c
tests/chirc/tests/common/: sessions.py
tests/chirc/tests/single_server/: test_connection.py
